--- a/notes/2024-04-19-misc.md
+++ b/notes/2024-04-19-misc.md
@@ -14,3 +14,10 @@ sys     27m51.071s
 
 Total file size is 2.28TB uncompressed; we can save up to 90% of disk space; or
 8TB could hold maybe something like 80TB, 16TB something like 160TB, etc.
+
+Iterating over 250M openalex records takes about 36min, or 116K records/s.
+
+```
+$ zstdcat -T0 openalex-works-2024-04-17.ndj.zst | pv -l > /dev/null
+250M 0:35:57 [ 115k/s] [
+```
