--- a/notes/2024-04-19-misc.md
+++ b/notes/2024-04-19-misc.md
@@ -6,7 +6,7 @@ takes 18 hours of full 32 core CPU load.
 
 ```
 $ time zstdcat -T0 openalex-works-2024-04-17.ndj.zst | pv | zstd -c19 -T0 > openalex-works-2024-04-17.ndj.zst.19
-2.28TiB 18:01:08 [36.9MiB/s] [                                                                                                                                           <=>                                                                  ]
+2.28TiB 18:01:08 [36.9MiB/s] [
 real    1081m31.126s
 user    33369m49.024s
 sys     27m51.071s
@@ -20,4 +20,19 @@ Iterating over 250M openalex records takes about 36min, or 116K records/s.
 ```
 $ zstdcat -T0 openalex-works-2024-04-17.ndj.zst | pv -l > /dev/null
 250M 0:35:57 [ 115k/s] [
+```
+
+## Reruns
+
+```
+$ time zstdcat -T0 openalex-works-2024-04-17.ndj.zst | \
+    catshape -f openalex | \
+    pv -l | \
+    zstd -c -T0 > ~/code/miku/scholkit/data/input/openalex.ndj.zst
+
+ 250M 1:03:49 [65.3k/s] [
+
+real    63m50.926s
+user    527m14.321s
+sys     42m32.610s
 ```
