--- a/notes/2024-04-19-misc.md
+++ b/notes/2024-04-19-misc.md
@@ -36,3 +36,34 @@ real    63m50.926s
 user    527m14.321s
 sys     42m32.610s
 ```
+
+new fatcat lost some million records (but where?):
+
+```
+$ zstdcat -T0 /var/data/tmp/fatcat.ndj.zst | pv -l | wc -l
+812M 0:09:14 [1.46M/s] [                                                                                                                                                                                             <=>                     ]
+812130550
+```
+
+it takes 10min to copy 100G from nvme to sata ssd:
+
+```
+$ time cp /var/data/tmp/fatcat.ndj.zst .
+
+real    10m30.432s
+user    0m0.106s
+sys     1m20.571s
+```
+
+## cat files
+
+```
+$ time cat input/*zst | pv > /var/data/tmp/fatcat.ndj.zst
+
+96.1GiB 0:04:13 [ 388MiB/s] [
+
+real    4m14.192s
+user    0m0.699s
+sys     2m15.785s
+```
+
