--- a/notes/2024-04-19-misc.md
+++ b/notes/2024-04-19-misc.md
@@ -55,6 +55,22 @@ user    0m0.106s
 sys     1m20.571s
 ```
 
+278M oaiscrape records
+
+```
+$ ll -h /var/data/share/oaiscrape/2024-04-19-metha-oai.xml.zst
+-rw-rw-r-- 1 tir tir 121G Apr 19 21:23 /var/data/share/oaiscrape/2024-04-19-metha-oai.xml.zst
+
+$ zstdcat -T0 /var/data/share/oaiscrape/2024-04-19-metha-oai.xml.zst | rg -F -c '</record>'
+278285578
+```
+
+Need to deduplicate; and try to shrink it as well.
+
+```
+$ time zstdcat -T0 /var/data/share/oaiscrape/2024-04-19-metha-oai.xml.zst | pv | LC_ALL=C sort -S80% -u | zstd -c19 -T0 > /var/data/share/oaiscrape/2024-04-19-metha-oai.xml.zst.19
+```
+
 ## cat files
 
 ```
@@ -66,4 +82,5 @@ real    4m14.192s
 user    0m0.699s
 sys     2m15.785s
 ```
+
 
