oai: log missing

--- a/notes/2024-04-19-misc.md
+++ b/notes/2024-04-19-misc.md
@@ -71,6 +71,26 @@ Need to deduplicate; and try to shrink it as well.
 $ time zstdcat -T0 /var/data/share/oaiscrape/2024-04-19-metha-oai.xml.zst | pv | LC_ALL=C sort -S80% -u | zstd -c19 -T0 > /var/data/share/oaiscrape/2024-04-19-metha-oai.xml.zst.19
 ```
 
+metha files: 122GB compressed, but only 90M get converted, of which 63486818 are unique; investigating ...
+
+```
+$ time zstdcat -T0 /var/data/share/oaiscrape/2024-04-19-metha-oai.xml.zst | \
+    catshape -f oai | \
+    pv -l | \
+    LC_ALL=C sort -u -S80% | \
+    zstd -c19 -T0 > /var/data/share/oaiscrape/2024-04-19-metha-oai.xml.zst.19
+
+89.5M 0:12:02 [ 123k/s] [
+
+real    31m35.501s
+user    661m44.079s
+sys     5m49.727s
+
+tir@k9:~ $ ll -h /var/data/share/oaiscrape/2024-04-19-metha-oai.xml.zst
+-rw-rw-r-- 1 tir tir 122G Apr 20 05:13 /var/data/share/oaiscrape/2024-04-19-metha-oai.xml.zst
+```
+
+
 ## cat files
 
 ```
