--- a/notes/2024-05-14-chocula.md
+++ b/notes/2024-05-14-chocula.md
@@ -215,5 +215,87 @@ Archive:  /home/tir/Downloads/issnltables.zip
 * `mag`
 * `openalex`
 
-OpenAlex has 254555 items in "sources", cf. [https://api.openalex.org/sources](https://api.openalex.org/sources)
+OpenAlex has 254555 items in "sources", cf.
+[https://api.openalex.org/sources](https://api.openalex.org/sources); the raw
+dump contains 285451 entries; where we find 152955 ISSN-L.
+
+```
+$ zstdcat -T0 sources.json.zst | parallel --pipe -j 32 --block 10M 'jq -rc .issn_l' | grep -v ^$ | grep -v null | wc -l
+152955
+```
+
+Almost the same as for ISSN:
+
+```
+$ zstdcat -T0 sources.json.zst | parallel --pipe -j 32 --block 10M 'jq -rc .issn' | grep -v null| wc -l
+152956
+```
+
+How many ISSN-ISSN-L entries does ISSN provide in their zip file? Well, they provide mappings for most:
+
+```
+$ unzip -p ~/Downloads/issnltables.zip 20230911.ISSN-L-to-ISSN.txt | wc -l
+2182124
+```
+
+How many ISSN do we have in our chocula database with recent updates?
+
+```
+sqlite> select count(*) from journal;
+204735
+```
+
+Of the openalex entries w/o ISSN-L, what are the types?
+
+```
+$ zstdcat -T0 sources.json.zst  | jq -rc 'select(.issn_l == null) | .type_id' | sort | uniq -c | sort -nr
+  84442 https://openalex.org/source-types/journal
+  31224 https://openalex.org/source-types/ebook%20platform
+  10844 https://openalex.org/source-types/conference
+   5131 https://openalex.org/source-types/repository
+    619 https://openalex.org/source-types/book%20series
+    233 https://openalex.org/source-types/other
+      2 https://openalex.org/source-types/metadata
+```
+
+So openalex does not have ISSN data for all records:
+
+* https://openalex.org/S4306505273 -- "Bulletin Zoologisch Museum"
+* https://www.wikidata.org/wiki/Q35137469
+* 0165-9464
+
+```
+sqlite> select * from journal where issnl = '0165-9464';
+0165-9464|||h3zbisiv6zdvtdxnytdbwbuamu|Q35137469|Bulletin Zoölogisch Museum, Universiteit van Amsterdam|Het Museum|nl||0|0||||0||||0|0||0|0|0|0|1|1
+```
+
+How many entries in OpenAlex have a wikidata identifier, but no ISSN-L?
+
+```
+$ zstdcat -T0 sources.json.zst  | jq -rc 'select(.issn_l == null and .type_id == "https://openalex.org/source-types/journal" and .ids.wikidata != null)' | wc -l
+11142
+```
+
+Only about 8K unique.
+
+```shell
+$ wc -l journals/openalex_journal_wo_issn_w_wikidata_qid.txt
+11142 openalex_journal_wo_issn_w_wikidata_qid.txt
+
+$ sort -u journals/openalex_journal_wo_issn_w_wikidata_qid.txt|wc -l
+8705
+```
+
+Which ISSN do we track, that openalex does not know about?
+
+## Comparison to previous db
+
+```
+wget -c https://archive.org/download/chocula-database-snapshot-2022-07-30/chocula.sqlite
+```
+
+In about 2 years, info about 15k journals.
+
+* 2022-07-30: 189204
+* 2024-05-14: 204735 (+8%, 15k)
 
