--- a/notes/2024-05-14-chocula.md
+++ b/notes/2024-05-14-chocula.md
@@ -299,3 +299,68 @@ In about 2 years, info about 15k journals.
 * 2022-07-30: 189204
 * 2024-05-14: 204735 (+8%, 15k)
 
+
+## Homepage status
+
+Made 233534 requests to CDX API; 128815 are HTTP 200 OK.
+
+```
+ 128815 200
+  68554 -1
+  22817 404
+   8834 403
+   1468 418
+   1297 500
+    610 410
+    234 503
+    182 400
+    171 520
+     99 523
+     95 406
+     87 502
+     47 401
+     36 409
+     30 429
+     29 405
+     21 301
+     19 467
+     16 530
+     15 521
+      9 412
+      8 202
+      7 501
+      6 302
+      6 300
+      3 526
+      3 504
+      2 525
+      2 509
+      2 303
+      1 603
+      1 599
+      1 555
+      1 522
+      1 464
+      1 417
+      1 416
+      1 415
+      1 408
+      1 402
+```
+
+### Examples
+
+404 now, but lots of captures
+
+* [http://web.archive.org/web/20240000000000/https://www.hydrologynz.org.nz/index.php/nzhs-publications/nzhs-journal](http://web.archive.org/web/20240000000000*/https://www.hydrologynz.org.nz/index.php/nzhs-publications/nzhs-journal)
+
+* Journal moved to a different domain, with a different domain: [https://www.hydrologynz.org.nz/journal/volume-55-2016](https://www.hydrologynz.org.nz/journal/volume-55-2016), no DOI, so hopefully not referenced by URL anywhere else
+
+404 now, lots of captures:
+
+* [http://revista.uft.edu.br/index.php/observatorio/index](http://revista.uft.edu.br/index.php/observatorio/index)
+* DOI redirects to the correct page now: https://sistemas.uft.edu.br/periodicos/index.php/observatorio/issue/view/181
+
+### add updates to fatcat
+
+
