--- a/notes/2025-03-22-towards-300m.md
+++ b/notes/2025-03-22-towards-300m.md
@@ -1,3 +1,38 @@
 # 300m
 
 Estimating that we will reach about 400m unique entities total.
+
+## Acquisition
+
+```
+/var/data/schol/feeds
+```
+
+* [ ] automatic backfill after hours or days of interruptions
+* [ ] find more compact ways to store, e.g. datacite
+* [ ] systemd processes need to be adjusted to maybe read start date from disk
+
+## Snapshots
+
+```
+/var/data/schol/snapshots
+```
+
+* [ ] compaction per source
+* [ ] keep only most recent around
+
+## Normalized
+
+```
+/var/data/schol/normalized
+```
+
+## Clustered
+
+```
+/var/data/schol/catalog
+```
+
+This is a single file, containing all records clustered.
+
+
