--- a/notes/2025-01-24-oai.md
+++ b/notes/2025-01-24-oai.md
@@ -1,5 +1,33 @@
 # oai
 
+Recent dump, expanded:
+
+```
+$ time find ~/.cache/metha/ -type f -name '*.gz' | parallel -j 32 'unpigz -c' | sk-oai-records > oai.raw
+
+real    945m59.351s
+user    687m19.785s
+sys     1553m7.202s
+
+$ stat --printf "%s\n" oai.raw # 1.4TB
+1444948730188
+
+$ time rg -c '<record ' oai.raw
+495407233
+
+real    9m54.014s
+user    2m20.829s
+sys     7m12.304s
+
+$ sk-oai-dctojsonl -f oai.raw | zstd -c -T0 > oai.json.zst
+```
+
+The `sk-oai-dctojsonl` tool crunches through 12M records per minute (w/ 32
+threads), so estimated time to convert about 45min.
+
+
+
+
 ```
 {"count":0,"url":"http://agricecon.agriculturejournals.cz/doi/10.17221/5011-AGRICECON.pdf"}
 {"count":0,"url":"http://digilib.unimed.ac.id/38425/7/4.%20NIM.%202151132008%20PREFACE.pdf"}
