--- a/notes/2025-03-22-towards-300m.md
+++ b/notes/2025-03-22-towards-300m.md
@@ -14,6 +14,11 @@ Estimating that we will reach about 400m unique entities total.
 
 ## Snapshots
 
+Per raw data snapshots are nice, as a debugging help; but it's more effort to
+implement snapshotting per source (as each source format is different). If we
+first normalize, then we could run snapshotting on the normalized version; just
+a single algorithm, but much more data to work through.
+
 ```
 /var/data/schol/snapshots
 ```
@@ -23,11 +28,18 @@ Estimating that we will reach about 400m unique entities total.
 
 ## Normalized
 
+Per source conversion to fatcat release schema, try to keep as much as possible
+from original format. Any data fixes a source needs can be applied at this
+stage.
+
 ```
 /var/data/schol/normalized
 ```
 
 ## Clustered
+
+Extract a table of identifiers and various normalized title or title author
+year strings and then do a second pass over that table.
 
 ```
 /var/data/schol/catalog
