wip: update notes

--- a/notes/2025-03-22-towards-300m.md
+++ b/notes/2025-03-22-towards-300m.md
@@ -1,6 +1,6 @@
 # 300m
 
-Estimating that we will reach about 400m unique entities total.
+Estimating that we will reach about 300-400m unique entities total.
 
 ## Acquisition
 
@@ -17,7 +17,8 @@ Estimating that we will reach about 400m unique entities total.
 Per raw data snapshots are nice, as a debugging help; but it's more effort to
 implement snapshotting per source (as each source format is different). If we
 first normalize, then we could run snapshotting on the normalized version; just
-a single algorithm, but much more data to work through.
+a single algorithm, but much more data to work through. Could also just
+snapshot normalized data per source, which would not be too much.
 
 ```
 /var/data/schol/snapshots
