--- a/notes/2025-03-22-towards-300m.md
+++ b/notes/2025-03-22-towards-300m.md
@@ -2,6 +2,18 @@
 
 Estimating that we will reach about 300-400m unique entities total.
 
+```
+$ du -hs --total *
+265G    crossref
+77G     datacite
+170G    metha
+413G    openalex
+50G     pubmed
+972G    total
+```
+
+To add: DBLP, DOAJ (maybe in metha)
+
 ## Acquisition
 
 ```
