--- a/notes/2025-03-22-towards-300m.md
+++ b/notes/2025-03-22-towards-300m.md
@@ -39,6 +39,27 @@ snapshot normalized data per source, which would not be too much.
 * [ ] compaction per source
 * [ ] keep only most recent around
 
+> Snapshot for crossref (about 1500 files):
+
+```
+martin@ia601101:/kubwa/schol $ TMPDIR=/kubwa/tmp time sk-crossref-snapshot -v -o /kubwa/schol/snapshots/sk-crossref-snapshot-2025-04-25.json.zst /kubwa/schol/feeds/crossref/feed-0*zst
+```
+
+> Openalex:
+
+```
+martin@ia601101:/kubwa/schol $ TMPDIR=/kubwa/tmp sk-snapshot -d /kubwa/schol/ -s openalex
+```
+
+> OAI:
+
+```
+martin@ia601101:/kubwa/schol $ TMPDIR=/kubwa/tmp sk-snapshot -d /kubwa/schol/ -s oai
+```
+
+>
+
+
 ## Normalized
 
 Per source conversion to fatcat release schema, try to keep as much as possible
@@ -59,5 +80,6 @@ year strings and then do a second pass over that table.
 ```
 
 This is a single file, containing all records clustered.
+
 
 
