--- a/notes/2025-03-22-towards-300m.md
+++ b/notes/2025-03-22-towards-300m.md
@@ -42,20 +42,28 @@ snapshot normalized data per source, which would not be too much.
 > Snapshot for crossref (about 1500 files):
 
 ```
-martin@ia601101:/kubwa/schol $ TMPDIR=/kubwa/tmp time sk-crossref-snapshot -v -o /kubwa/schol/snapshots/sk-crossref-snapshot-2025-04-25.json.zst /kubwa/schol/feeds/crossref/feed-0*zst
+martin@ia601101:/kubwa/schol $ TMPDIR=/kubwa/tmp time sk-crossref-snapshot -v -o /kubwa/schol/snapshots/sk-crossref-snapshot-2025-04-27.json.zst /kubwa/schol/feeds/crossref/crossref-feed-0-index-202*zst
 ```
 
 > Openalex:
 
 ```
 martin@ia601101:/kubwa/schol $ TMPDIR=/kubwa/tmp sk-snapshot -d /kubwa/schol/ -s openalex
+...
+ 265M 14:59:39 [4.92k/s] [                                                                                                                                                                                   <=>                              ]
+2025/04/27 15:51:29 snapshot created at: /kubwa/schol/snapshots/snapshot-openalex-2025-04-27.jsonl.zst
 ```
+
+Likely slow due to parallel i/o from spinning disk; try sequential next.
 
 > OAI:
 
 ```
 martin@ia601101:/kubwa/schol $ TMPDIR=/kubwa/tmp sk-snapshot -d /kubwa/schol/ -s oai
 ```
+
+Faster than expected, but also a bit smaller than expected; 110M records (may
+be lag in harvest).
 
 >
 
