--- a/notes/2025-03-22-towards-300m.md
+++ b/notes/2025-03-22-towards-300m.md
@@ -65,7 +65,9 @@ martin@ia601101:/kubwa/schol $ TMPDIR=/kubwa/tmp sk-snapshot -d /kubwa/schol/ -s
 Faster than expected, but also a bit smaller than expected; 110M records (may
 be lag in harvest).
 
->
+> PUBMED:
+
+Just concat the gzip; do compaction on the jsonline, later.
 
 
 ## Normalized
