--- a/notes/2025-03-22-towards-300m.md
+++ b/notes/2025-03-22-towards-300m.md
@@ -69,6 +69,16 @@ be lag in harvest).
 
 Just concat the gzip; do compaction on the jsonline, later.
 
+```
+$ time sk-snapshot -d /kubwa/schol/ -s pubmed -v
+2025/04/28 17:39:10 find /kubwa/schol/feeds/pubmed -type f -name "pubmed*.xml.gz" | parallel --block 10M --line-buffer -j 24 -I {} unpigz -c {} | zstd -c -T0 > /kubwa/schol/snapshots/snapshot-pubmed-2025-04-28.jsonl.zst
+2025/04/28 19:10:41 snapshot created at: /kubwa/schol/snapshots/snapshot-pubmed-2025-04-28.jsonl.zst
+
+real    91m30.579s
+user    88m46.784s
+sys     36m16.254s
+```
+
 
 ## Normalized
 
