--- a/notes/2025-03-22-towards-300m.md
+++ b/notes/2025-03-22-towards-300m.md
@@ -79,6 +79,12 @@ user    88m46.784s
 sys     36m16.254s
 ```
 
+> Datacite:
+
+```
+$ time sk-snapshot -w 4 -s datacite -d /kubwa/schol/ -T /fast/tmp
+```
+
 
 ## Normalized
 
