--- a/notes/2025-03-22-towards-300m.md
+++ b/notes/2025-03-22-towards-300m.md
@@ -86,15 +86,18 @@ $ time sk-snapshot -w 4 -s datacite -d /kubwa/schol/ -T /fast/tmp
 ```
 
 
-## Normalized
+## Normalized ("pile")
 
 Per source conversion to fatcat release schema, try to keep as much as possible
 from original format. Any data fixes a source needs can be applied at this
 stage.
 
 ```
-/var/data/schol/normalized
+martin@ia601101:/kubwa/schol $ time zstdcat -T0 snapshots/snapshot-crossref-2025-04-27.jsonl.zst | sk-convert -f crossref | pv -l | zstd -c -T0 > normalized/fatcat-crossref-2025-04-27.jsonl.zst
+martin@ia601101:/kubwa/schol $ time zstdcat -T0 snapshots/snapshot-openalex-2025-04-27.jsonl.zst | sk-convert -f openalex | pv -l | zstd -c -T0 > normalized/fatcat-openalex-2025-04-27.jsonl.zst
 ```
+
+
 
 ## Clustered
 
