--- a/notes/2025-03-22-towards-300m.md
+++ b/notes/2025-03-22-towards-300m.md
@@ -24,6 +24,19 @@ To add: DBLP, DOAJ (maybe in metha)
 * [ ] find more compact ways to store, e.g. datacite
 * [ ] systemd processes need to be adjusted to maybe read start date from disk
 
+After a few weeks of regular updates we are at about 1.3TB compressed data
+(est. 6-8TB uncompressed).
+
+```
+$ du -hs --total feeds/*
+426G    feeds/crossref
+123G    feeds/datacite
+238G    feeds/metha
+414G    feeds/openalex
+51G     feeds/pubmed
+1.3T    total
+```
+
 ## Snapshots
 
 Per raw data snapshots are nice, as a debugging help; but it's more effort to
@@ -85,6 +98,22 @@ sys     36m16.254s
 $ time sk-snapshot -w 4 -s datacite -d /kubwa/schol/ -T /fast/tmp
 ```
 
+Total size (est).
+
+```
+snapshot-crossref-2025-04-27.jsonl.zst
+168702386
+snapshot-datacite-2025-05-01.jsonl.zst
+43938471
+snapshot-oai-2025-04-25.jsonl.zst
+114584963
+snapshot-openalex-2025-04-27.jsonl.zst
+265686607
+```
+
+> 592912427 + missing datacite, missing oai, pubmed
+
+
 
 ## Normalized ("pile")
 
@@ -94,8 +123,19 @@ stage.
 
 ```
 martin@ia601101:/kubwa/schol $ time zstdcat -T0 snapshots/snapshot-crossref-2025-04-27.jsonl.zst | sk-convert -f crossref | pv -l | zstd -c -T0 > normalized/fatcat-crossref-2025-04-27.jsonl.zst
+
+real    383m15.612s
+user    465m1.652s
+sys     98m19.071s
+
 martin@ia601101:/kubwa/schol $ time zstdcat -T0 snapshots/snapshot-openalex-2025-04-27.jsonl.zst | sk-convert -f openalex | pv -l | zstd -c -T0 > normalized/fatcat-openalex-2025-04-27.jsonl.zst
+
+real    560m48.170s
+user    1422m59.637s
+sys     207m34.374s
 ```
+
+
 
 
 
