--- a/notes/2025-03-22-towards-300m.md
+++ b/notes/2025-03-22-towards-300m.md
@@ -78,6 +78,24 @@ martin@ia601101:/kubwa/schol $ TMPDIR=/kubwa/tmp sk-snapshot -d /kubwa/schol/ -s
 Faster than expected, but also a bit smaller than expected; 110M records (may
 be lag in harvest).
 
+Ran the manual (on a scratch machine):
+
+```
+$ time find ~/.cache/metha/ -type f -name '*.gz' | parallel -j 32 'unpigz -c' | sk-oai-records | sk-oai-dctojsonl-stream | pv -l | zstd -c -T0 > /var/data/share/oaiscrape/2025-05-01-oaiscrape.jsonl.zst
+real    1031m11.061s
+user    2027m57.586s
+sys     1795m43.168s
+```
+
+This results in 194GB compressed data in about 508M lines. Need to deduplicate,
+first. Can iterate at about 36M lines/min.
+
+Doing a basic dedup w/ sort:
+
+```
+$ time zstdcat -T0 2025-05-01-oaiscrape.jsonl.zst | LC_ALL=C sort -T /var/data/tmp/ -S 80% -u | zstd -c -T0 > 2025-05-01-oaiscrape-unique.jsonl.zst
+```
+
 > PUBMED:
 
 Just concat the gzip; do compaction on the jsonline, later.
@@ -122,18 +140,22 @@ from original format. Any data fixes a source needs can be applied at this
 stage.
 
 ```
-martin@ia601101:/kubwa/schol $ time zstdcat -T0 snapshots/snapshot-crossref-2025-04-27.jsonl.zst | sk-convert -f crossref | pv -l | zstd -c -T0 > normalized/fatcat-crossref-2025-04-27.jsonl.zst
+u@h:/kubwa/schol $ time zstdcat -T0 snapshots/snapshot-crossref-2025-04-27.jsonl.zst | sk-convert -f crossref | pv -l | zstd -c -T0 > normalized/fatcat-crossref-2025-04-27.jsonl.zst
 
 real    383m15.612s
 user    465m1.652s
 sys     98m19.071s
 
-martin@ia601101:/kubwa/schol $ time zstdcat -T0 snapshots/snapshot-openalex-2025-04-27.jsonl.zst | sk-convert -f openalex | pv -l | zstd -c -T0 > normalized/fatcat-openalex-2025-04-27.jsonl.zst
+u@h:/kubwa/schol $ time zstdcat -T0 snapshots/snapshot-openalex-2025-04-27.jsonl.zst | sk-convert -f openalex | pv -l | zstd -c -T0 > normalized/fatcat-openalex-2025-04-27.jsonl.zst
 
 real    560m48.170s
 user    1422m59.637s
 sys     207m34.374s
+
+u@h:/kubwa/schol $ time zstdcat -T0 snapshots/snapshot-datacite-2025-05-01.jsonl.zst | sk-convert -f datacite | pv -l | zstd -c -T0 normalized/fatcat-datacite-2025-05-01.jsonl.zst
 ```
+
+Datacite normalization; still some failed docs.
 
 
 
