--- a/notes/2025-03-22-towards-300m.md
+++ b/notes/2025-03-22-towards-300m.md
@@ -131,7 +131,9 @@ snapshot-openalex-2025-04-27.jsonl.zst
 
 > 592912427 + missing datacite, missing oai, pubmed
 
+Assume OAI: 200M, assume missing datacite: 15M, assume pubmed: 30M
 
+> 592912427 + 90M (oai) + 15M + 30M = 727,912,427 records with duplicates
 
 ## Normalized ("pile")
 
