--- a/notes/2025-03-22-towards-300m.md
+++ b/notes/2025-03-22-towards-300m.md
@@ -70,8 +70,6 @@ martin@ia601101:/kubwa/schol $ TMPDIR=/kubwa/tmp sk-snapshot -d /kubwa/schol/ -s
 
 Likely slow due to parallel i/o from spinning disk; try sequential next.
 
-> OAI:
-
 ```
 martin@ia601101:/kubwa/schol $ TMPDIR=/kubwa/tmp sk-snapshot -d /kubwa/schol/ -s oai
 ```
@@ -95,6 +93,13 @@ Doing a basic dedup w/ sort:
 
 ```
 $ time zstdcat -T0 2025-05-01-oaiscrape.jsonl.zst | LC_ALL=C sort -T /var/data/tmp/ -S 80% -u | zstd -c -T0 > 2025-05-01-oaiscrape-unique.jsonl.zst
+
+real    39m19.667s
+user    44m49.785s
+sys     22m45.961s
+
+$ zstdcat -T0 2025-05-01-oaiscrape-unique.jsonl.zst | wc -l # 7 minutes to iterate
+300453726
 ```
 
 > PUBMED:
@@ -135,6 +140,14 @@ snapshot-openalex-2025-04-27.jsonl.zst
 Assume OAI: 200M, assume missing datacite: 15M, assume pubmed: 30M
 
 > 592912427 + 90M (oai) + 15M + 30M = 727,912,427 records with duplicates
+
+OAI:
+
+```
+$ zstdcat -T0 2025-05-01-oaiscrape-unique.jsonl.zst| pv -l | wc -l
+ 300M 0:07:04 [ 707k/s] [                                                                                                         <=>                                                                                                         ]
+300453726
+``
 
 ## Normalized ("pile")
 
