--- a/notes/2025-03-22-towards-300m.md
+++ b/notes/2025-03-22-towards-300m.md
@@ -174,6 +174,13 @@ u@h:/kubwa/schol $ time zstdcat -T0 snapshots/snapshot-datacite-2025-05-01.jsonl
 Datacite normalization; still some failed docs.
 
 
+Fast XML processing had bugs, dropping pproc, skip snapshot and just convert
+data from the individual files directly to fatcat schema.
+
+```
+$ cd normalized
+$ time find ../feeds/pubmed/ -name '*pubmed*gz' | parallel 'zcat {} | sk-convert -B -f pubmed' | pv -l | zstd -c -T0 > fatcat-pubmed-04-28.jsonl.zst
+```
 
 
 
