--- a/notes/2025-03-22-towards-300m.md
+++ b/notes/2025-03-22-towards-300m.md
@@ -180,6 +180,10 @@ data from the individual files directly to fatcat schema.
 ```
 $ cd normalized
 $ time find ../feeds/pubmed/ -name '*pubmed*gz' | parallel 'zcat {} | sk-convert -B -f pubmed' | pv -l | zstd -c -T0 > fatcat-pubmed-04-28.jsonl.zst
+
+real    48m1.200s
+user    1000m43.674s
+sys     45m36.022s
 ```
 
 
