--- a/notes/2025-03-22-towards-300m.md
+++ b/notes/2025-03-22-towards-300m.md
@@ -147,7 +147,16 @@ OAI:
 $ zstdcat -T0 2025-05-01-oaiscrape-unique.jsonl.zst| pv -l | wc -l
  300M 0:07:04 [ 707k/s] [                                                                                                         <=>                                                                                                         ]
 300453726
-``
+
+$ time zstdcat -T0 2025-05-01-oaiscrape-unique.jsonl.zst| wc -cl
+300453726 555893499488 # 517GB
+
+real    14m23.462s
+user    11m13.865s
+sys     5m23.256s
+```
+
+
 
 ## Normalized ("pile")
 
