--- a/notes/2025-05-31-dedupe.md
+++ b/notes/2025-05-31-dedupe.md
@@ -74,4 +74,96 @@ D select count(distinct title) from records;
 │       395607377       │
 │   (395.61 million)    │
 └───────────────────────┘
+
+D select title_normalized, count(*) as c from records group by title_normalized order by c;
+100% ▕████████████████████████████████████████████████████████████▏
+┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┬──────────┐
+│                                                                                                         title_normalized                                                                                                         │    c     │
+│                                                                                                             varchar                                                                                                              │  int64   │
+├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┼──────────┤
+│ understanding the barriers to and opportunities for access to private equity for small to medium sized family owned enterprises smfes                                                                                            │        1 │
+│ on dit volume 51 issue 16                                                                                                                                                                                                        │        1 │
+│ remembering the stable                                                                                                                                                                                                           │        1 │
+│ on dit volume 55 issue 17                                                                                                                                                                                                        │        1 │
+│ on dit volume 58 issue 21                                                                                                                                                                                                        │        1 │
+│ on dit volume 59 issue 5                                                                                                                                                                                                         │        1 │
+│ continental drift australia s search for a regional identity by rawdon dalrymple                                                                                                                                                 │        1 │
+│ privacy and your health information tips to protect your privacy                                                                                                                                                                 │        1 │
+│ on dit volume 62 issue 22                                                                                                                                                                                                        │        1 │
+│ part ii section 6 assorted papers relating to japanese occupation of ocean island contains translations of public statements and orders                                                                                          │        1 │
+│ on dit volume 64 issue 1                                                                                                                                                                                                         │        1 │
+│ habitat use by bluegills pomoxis annularis and oregon chub oregonichthys crameri in an off channel habitat in the willamette valley                                                                                              │        1 │
+│ inter varsity athletics 1914                                                                                                                                                                                                     │        1 │
+│ plant growth regulation indolinone derivatives as phytoregulators                                                                                                                                                                │        1 │
+│ on dit volume 67 issue 1                                                                                                                                                                                                         │        1 │
+│ pedestrian and bicycle performance measure recommendations capturing our true progress                                                                                                                                           │        1 │
+│ the code of ammurabi king of babylon about 2250 b c autographed text transliteration translation glossary index of subjects lists of proper names signs numerals corrections and erasures with map frontispiece and photograph…  │        1 │
+│ columbia gorge dalles airport individual airport report                                                                                                                                                                          │        1 │
+│ foreign workers integration in australia and undocumented immigration in asia                                                                                                                                                    │        1 │
+│ die augsburgische konfession im deutschen und lateinischen text mit erkl rung des inhalts und beif gung der hauptquellen                                                                                                         │        1 │
+│      ·                                                                                                                                                                                                                           │        · │
+│      ·                                                                                                                                                                                                                           │        · │
+│      ·                                                                                                                                                                                                                           │        · │
+│ bibliography                                                                                                                                                                                                                     │   220794 │
+│ conclusion                                                                                                                                                                                                                       │   223403 │
+│ 3                                                                                                                                                                                                                                │   225633 │
+│ streptomyces sp                                                                                                                                                                                                                  │   256689 │
+│ le progr s journal de lyon politique quotidien                                                                                                                                                                                   │   312218 │
+│ contents                                                                                                                                                                                                                         │   351621 │
+│ book reviews                                                                                                                                                                                                                     │   363882 │
+│ frontmatter                                                                                                                                                                                                                      │   387208 │
+│ 2                                                                                                                                                                                                                                │   390534 │
+│ table of contents                                                                                                                                                                                                                │   411334 │
+│ preface                                                                                                                                                                                                                          │   417419 │
+│ 1                                                                                                                                                                                                                                │   429558 │
+│ front matter                                                                                                                                                                                                                     │   502816 │
+│ index                                                                                                                                                                                                                            │   560804 │
+│ editorial                                                                                                                                                                                                                        │   598203 │
+│ editorial board                                                                                                                                                                                                                  │   755866 │
+│ gbif occurrence download                                                                                                                                                                                                         │   782126 │
+│ introduction                                                                                                                                                                                                                     │   946426 │
+│ occurrence download                                                                                                                                                                                                              │  5648917 │
+│ NULL                                                                                                                                                                                                                             │ 35956845 │
+├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┴──────────┤
+│ 317188021 rows (40 shown)                                                                                                                                                                                                         2 columns │
+└─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
+
+D select count(*) from (select title_normalized, count(*) as c from records group by title_normalized) where c = 1;
+100% ▕████████████████████████████████████████████████████████████▏
+┌──────────────────┐
+│   count_star()   │
+│      int64       │
+├──────────────────┤
+│    125645827     │
+│ (125.65 million) │
+└──────────────────┘
+D select count(*) from (select title_normalized, count(*) as c from records group by title_normalized) where c < 3;
+100% ▕████████████████████████████████████████████████████████████▏
+┌──────────────────┐
+│   count_star()   │
+│      int64       │
+├──────────────────┤
+│    234619786     │
+│ (234.62 million) │
+└──────────────────┘
+D select count(*) from (select title_normalized, count(*) as c from records group by title_normalized) where c < 5;
+100% ▕████████████████████████████████████████████████████████████▏
+┌──────────────────┐
+│   count_star()   │
+│      int64       │
+├──────────────────┤
+│    293150228     │
+│ (293.15 million) │
+└──────────────────┘
+
+D select count(*) from (select title_normalized, count(*) as c from records group by title_normalized) where c > 5;
+100% ▕████████████████████████████████████████████████████████████▏
+┌─────────────────┐
+│  count_star()   │
+│      int64      │
+├─────────────────┤
+│    14978224     │
+│ (14.98 million) │
+└─────────────────┘
+
 ```
