--- a/notes/2025-03-22-towards-300m.md
+++ b/notes/2025-03-22-towards-300m.md
@@ -156,6 +156,32 @@ user    11m13.865s
 sys     5m23.256s
 ```
 
+Update 06/2025 (no dedupe):
+
+```
+$ time zstdcat -T0 2025-06-06-oaiscrape-unique.jsonl.zst | pv | wc -l
+ 869GiB 0:21:44 [ 683MiB/s] [                    <=>                                                                                                                                                                                          ]
+467379868
+
+real    21m44.060s
+user    14m15.304s
+sys     8m58.414s
+```
+
+Note: metha single file per scrape window (e.g. monthly) does not scale for
+creating snapshots, as those need to iterate over all files.
+
+The OAI-PMH description token view:
+
+* descriptions only amount to 39GB compressed; 217GB uncompressed; that's
+  approx. 42573824917 tokens, so 42B tokens (cf. 242B in
+https://www.institutionaldatainitiative.org/institutional-books)
+
+```
+$ zstdcat -T0 2025-05-01-oaiscrape-description.zst | pv | wc -wc
+31,930,368,688 233889539833 # 217GB
+```
+
 
 
 ## Normalized ("pile")
