--- a/notes/2025-03-22-towards-300m.md
+++ b/notes/2025-03-22-towards-300m.md
@@ -182,6 +182,15 @@ $ zstdcat -T0 2025-05-01-oaiscrape-description.zst | pv | wc -wc
 31,930,368,688 233889539833 # 217GB
 ```
 
+WIP snapshot; 502M, w/ dups.
+
+```
+$ zstdcat -T0 2025-06-06-oaiscrape-unique.jsonl.zst | pv | wc -l
+ 928GiB 0:17:52 [ 886MiB/s] [                                                                                                               <=>                                                                                               ]
+502142230
+```
+
+
 
 
 ## Normalized ("pile")
