--- a/notes/2025-03-22-towards-300m.md
+++ b/notes/2025-03-22-towards-300m.md
@@ -190,6 +190,33 @@ $ zstdcat -T0 2025-06-06-oaiscrape-unique.jsonl.zst | pv | wc -l
 502142230
 ```
 
+Finally, 526M raw records, took over a week to collect this data; 205GB
+compressed; 219418689531 Jun 14 11:36 2025-06-06-oaiscrape-unique.jsonl.zst.
+
+```
+real    11083m29.522s
+user    17742m33.824s
+sys     27159m36.184s
+```
+
+Need to at least deduplicate:
+
+```
+$ time zstdcat -T0 2025-06-06-oaiscrape-unique.jsonl.zst | \
+    LC_ALL=C sort -S80% -u | \
+    zstd -c -T0 > 2025-06-06-oaiscrape-unique-sorted.jsonl.zst
+
+real    40m1.940s
+user    48m33.824s
+sys     23m53.433s
+
+$ zstdcat -T0 2025-06-06-oaiscrape-unique.jsonl.zst| pv | wc -lc
+ 541GiB 0:06:30 [1.39GiB/s]
+
+311709151 581275801099
+```
+
+So, 541GB uncompressed JSON, 311M lines.
 
 
 
